syntax = "proto3";

option csharp_namespace = "GrpcAssociation";

package AssociationApi;

service Association {
  rpc AddUrl (UrlRequest) returns (UrlAssociationReply);
}

message UrlRequest {
  string Address = 1;
}

message UrlAssociationReply {
  string key = 1;
  string address = 2;
}
